<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent" android:orientation="vertical" app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="match_parent" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" >



        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content" android:text="Signup"  android:layout_margin="8dp" android:layout_gravity="right"
            android:layout_height="wrap_content"  style="@style/Widget.MaterialComponents.Button.TextButton"
             android:id="@+id/fragment_login_btnSignup"/>


        <ImageView android:layout_height="64dp" android:layout_width="128dp"
            android:src="@drawable/a6gnl_innovative_skill_academy_1"  android:layout_marginTop="24dp"/>
        <TextView
            android:layout_width="wrap_content" android:text="@string/login_title"
            android:layout_height="wrap_content" android:textSize="32sp"/>
        <TextView
            android:layout_width="wrap_content" android:text="@string/login"
            android:layout_height="wrap_content" android:textSize="28sp" android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent" app:hintEnabled="true" app:hintAnimationEnabled="true" android:hint="@string/hint_login"
            android:layout_height="wrap_content" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="64dp" app:endIconMode="custom" android:id="@+id/login_edit_layout_email"
            app:endIconDrawable="@drawable/ic_baseline_mark_email_unread_24">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent" android:id="@+id/login_edit_text_email"
                android:layout_height="56dp" android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent" app:hintEnabled="true" app:hintAnimationEnabled="true" android:hint="@string/hint_password"
            android:layout_height="wrap_content" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="8dp" app:endIconMode="password_toggle" android:id="@+id/login_edit_layout_password">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"  android:id="@+id/login_edit_text_password"
                android:layout_height="56dp" android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent" android:layout_marginTop="64dp" android:id="@+id/login_button"
            android:layout_height="64dp" android:text="@string/login_button"/>




    </LinearLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="match_parent" app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/loginIndicator"
        android:layout_height="wrap_content" app:layout_constraintLeft_toLeftOf="parent" android:visibility="invisible" android:indeterminate="true"/>



</androidx.constraintlayout.widget.ConstraintLayout>